--- a/.github/workflows/mavenBuild.yml
+++ b/.github/workflows/mavenBuild.yml
@@ -39,3 +39,7 @@ jobs:
           java-version: 17
       - name: Build with Maven
         run: mvn -B install --file pom.xml
+      - name: sonarqube update
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn -Dsonar.login=${{ secrets.SONAR_TOKEN }} sonar:sonar
