--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     <sonar.login>${sonar-login}</sonar.login>
+    <sonar.projectKey>jexxa-projects_JLegMed</sonar.projectKey>
     <sonar.java.source>1.17</sonar.java.source>
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-ut/jacoco.xml,target/site/jacoco-it/jacoco.xml </sonar.coverage.jacoco.xmlReportPaths>
     <sonar.java.libraries>target</sonar.java.libraries>
