--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
     <gson.version>2.10.1</gson.version>
     <javax.jms.version>2.0.1</javax.jms.version>
 
-    <!--<activemq.artemis.client.version>2.31.0</activemq.artemis.client.version>
-    <postgres.version>42.6.0</postgres.version> -->
+    <activemq.artemis.client.version>2.31.0</activemq.artemis.client.version>
+    <postgres.version>42.6.0</postgres.version>
     <slf4j.simple.version>2.0.9</slf4j.simple.version>
 
     <!-- version of test dependencies -->
@@ -79,6 +79,7 @@
     <maven.versions.plugin>2.16.1</maven.versions.plugin>
     <maven.build.helper.version>3.4.0</maven.build.helper.version>
     <maven.shade.plugin>3.5.1</maven.shade.plugin>
+    <maven.templating.plugin>1.0.0</maven.templating.plugin>
 
     <!-- sonar configuration  -->
     <sonar.organization>jexxa-projects</sonar.organization>
@@ -157,11 +158,33 @@
       <version>${maven.jacoco.plugin}</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- dependencies for tests with JDBCAdapter -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgres.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- dependencies for tests with ActiveMQ -->
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>artemis-jms-client</artifactId>
+      <version>${activemq.artemis.client.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (maybe moved to parent pom) -->
       <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>templating-maven-plugin</artifactId>
+          <version>${maven.templating.plugin}</version>
+        </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -261,6 +284,19 @@
 
     <!-- Plugin specific configuration -->
     <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>templating-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>filter-src</id>
+            <goals>
+              <goal>filter-sources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
