--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,17 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
 
-    <!-- version of dependencies -->
+    <!-- version of core dependencies -->
     <jexxa.adapter.api.version>4.2.1</jexxa.adapter.api.version>
     <gson.version>2.10.1</gson.version>
-    <javax.jms.version>2.0.1</javax.jms.version>
 
+    <!-- version of dependencies -->
+    <javax.jms.version>2.0.1</javax.jms.version>
     <activemq.artemis.client.version>2.31.0</activemq.artemis.client.version>
     <postgres.version>42.6.0</postgres.version>
     <slf4j.simple.version>2.0.9</slf4j.simple.version>
+    <unirest.java.version>3.14.5</unirest.java.version>
+
 
     <!-- version of test dependencies -->
     <junit.platform.launcher.version>1.10.0</junit.platform.launcher.version>
@@ -173,6 +176,19 @@
       <artifactId>artemis-jms-client</artifactId>
       <version>${activemq.artemis.client.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.konghq</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>${unirest.java.version}</version>
+
+      <exclusions>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
