- Removed leading io.jexxa from jdbc parameters - Made Repository test to an IT test

--- a/src/test/resources/jlegmed-application.properties
+++ b/src/test/resources/jlegmed-application.properties
@@ -21,5 +21,8 @@ jlegmed.test-jms-connection.java.naming.password=simetraehcapa
 jlegmed.test-jdbc-connection.jdbc.driver=org.postgresql.Driver
 jlegmed.test-jdbc-connection.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
 jlegmed.test-jdbc-connection.jdbc.username=postgres
-jlegmed.test-jdbc-connection.password=admin
-
+jlegmed.test-jdbc-connection.jdbc.password=admin
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case you have to define a valid default URL (e.g. for testing purpose)
+jlegmed.test-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
