--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <awaitility.version>4.2.0</awaitility.version>
     <unirest.java.version>3.14.1</unirest.java.version>
     <jackson.databind.version>2.15.3</jackson.databind.version>
+    <apache.commons.lang3>3.13.0</apache.commons.lang3>
 
 
 
@@ -126,6 +127,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>${slf4j.simple.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${apache.commons.lang3}</version>
     </dependency>
 
 
