Added base class Filter which provide a state modell for the filters. This is required for proper initialization and starting.

--- a/src/test/resources/jlegmed-application.properties
+++ b/src/test/resources/jlegmed-application.properties
@@ -26,3 +26,13 @@ jlegmed.test-jdbc-connection.jdbc.password=admin
 jlegmed.test-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
 # The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
 jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
+
+##########################################
+#Settings for HTTP                     #
+##########################################
+jlegmed.test-http-connection.http.proxy.host="http://"
+jlegmed.test-http-connection.http.proxy.port=1234
+jlegmed.test-http-connection.http.proxy.username="dsd"
+jlegmed.test-http-connection.http.proxy.password="dsd"
+jlegmed.test-http-connection.http.proxy.file.username="dsd"
+jlegmed.test-http-connection.http.proxy.file.password="dsd"
