Change: + Added properties for HTML-requests to set a proxy + Each filter instance now uses its own unirest instance to enable different configurations and proper cleanup per instance

--- a/src/test/resources/jlegmed-application.properties
+++ b/src/test/resources/jlegmed-application.properties
@@ -30,9 +30,9 @@ jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
 ##########################################
 #Settings for HTTP                     #
 ##########################################
-jlegmed.test-http-connection.http.proxy.host="http://"
-jlegmed.test-http-connection.http.proxy.port=1234
-jlegmed.test-http-connection.http.proxy.username="dsd"
-jlegmed.test-http-connection.http.proxy.password="dsd"
-jlegmed.test-http-connection.http.proxy.file.username="dsd"
-jlegmed.test-http-connection.http.proxy.file.password="dsd"
+jlegmed.test-http-connection.http.proxy.host=174.77.111.197
+jlegmed.test-http-connection.http.proxy.port=4145
+jlegmed.test-http-connection.http.proxy.username=
+jlegmed.test-http-connection.http.proxy.password=
+jlegmed.test-http-connection.http.proxy.file.username=
+jlegmed.test-http-connection.http.proxy.file.password=
