Added profile to sign artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -400,7 +400,7 @@
         </configuration>
       </plugin>
 
-      <plugin>
+     <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <releaseProfiles>sign-artifacts</releaseProfiles>
@@ -514,6 +514,33 @@
   </distributionManagement>
 
   <profiles>
+    <profile>
+      <id>sign-artifacts</id>
+      <activation>
+        <property>
+          <name>sign</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>${gpg.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>integrationTests</id>
       <activation>
