--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
 
     <!--version of  maven plugins  -->
+    <gpg.plugin.version>3.1.0</gpg.plugin.version>
     <maven.clean.plugin>3.3.2</maven.clean.plugin>
     <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
     <maven.deploy.plugin>3.1.1</maven.deploy.plugin>
