--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <name>JLegMed</name>
   <groupId>io.jexxa.jlegmed</groupId>
   <artifactId>jlegmed</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
+  <version>0.1.3</version>
 
   <url>https://www.jexxa.io</url>
 
@@ -29,7 +29,7 @@
     <connection>scm:git:https://github.com/jexxa-projects/JLegMed.git</connection>
     <url>https://github.com/jexxa-projects/JLegMed</url>
     <developerConnection>scm:git:https://github.com/jexxa-projects/JLegMed.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>jlegmed-0.1.3</tag>
   </scm>
 
   <properties>
