- removed stateID method to simplify usage of context information

--- a/src/test/resources/jlegmed-application.properties
+++ b/src/test/resources/jlegmed-application.properties
@@ -36,3 +36,9 @@ jlegmed.test-http-connection.http.proxy.username=
 jlegmed.test-http-connection.http.proxy.password=
 jlegmed.test-http-connection.http.proxy.file.username=
 jlegmed.test-http-connection.http.proxy.file.password=
+
+
+jlegmed.application.name=${project.name}
+jlegmed.application.version=${project.version}
+jlegmed.application.repository=${project.scm.developerConnection}
+jlegmed.application.build.timestamp=${build.timestamp}
