--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <name>JLegMed</name>
   <groupId>io.jexxa.jlegmed</groupId>
   <artifactId>jlegmed</artifactId>
-  <version>0.3.0</version>
+  <version>0.3.1-SNAPSHOT</version>
 
   <url>https://www.jexxa.io</url>
 
