* TCPSender: Added possibility to define a Consumer so that the plugin can be used as sink and processor * TCPSender/TCPReceiver: Filter can now also be configured via properties file * Test Cleanup

--- a/src/test/resources/jlegmed-application.properties
+++ b/src/test/resources/jlegmed-application.properties
@@ -37,3 +37,10 @@ jlegmed.test-http-connection.http.proxy.password=
 jlegmed.test-http-connection.http.proxy.file.username=
 jlegmed.test-http-connection.http.proxy.file.password=
 
+# Settings for TCP socket
+jlegmed.test-tcp-sender.tcp.port=6665
+jlegmed.test-tcp-sender.tcp.address=localhost
+
+# Settings for TCP socket
+jlegmed.test-tcp-receiver.tcp.port=6665
+
