--- a/pom.xml
+++ b/pom.xml
@@ -396,6 +396,10 @@
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <releaseProfiles>sign-artifacts</releaseProfiles>
+          <arguments>-Psign-artifacts</arguments>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -513,6 +517,33 @@
 
 
   <profiles>
+    <profile>
+      <id>sign-artifacts</id>
+      <activation>
+        <property>
+          <name>sign</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>${gpg.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>integrationTests</id>
       <activation>
